main/default/objects/Car_center__c/Car_center__c.object-meta.xml
<CustomObject>
    <label>Сar center</label>
    <nameField>
        <label>Car center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Сar centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>