main/default/objects/Car_center__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>street, number</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>