main/default/objects/Car_center__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minsk</fullName>
            </value>
            <value>
                <fullName>Mogilev</fullName>
            </value>
            <value>
                <fullName>Vitebsk</fullName>
            </value>
            <value>
                <fullName>Gomel</fullName>
            </value>
            <value>
                <fullName>Brest</fullName>
            </value>
            <value>
                <fullName>Grodno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>