main/default/objects/Car_center__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Сar centers</relationshipLabel>
    <relationshipName>Car_centers</relationshipName>
    <type>Lookup</type>
</CustomField>