main/default/objects/Car_center__c/fields/What_center__c.field-meta.xml
<CustomField>
    <fullName>What_center__c</fullName>
    <label>What center</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diller</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>