main/default/objects/Car_center__c/recordTypes/Diller.recordType-meta.xml
<RecordType>
    <fullName>Diller</fullName>
    <active>true</active>
    <label>Diller</label>
</RecordType>