main/default/objects/Car_center__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <label>Service</label>
</RecordType>