main/default/objects/Car_center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Email__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Service__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>